# pyparse

./: AGENTS.md  Cargo.toml  README.md  TODO.md  bacon.toml  justfile  perf.data  perf.data.old
.agent/: TODO.md
.agent/plans/: 2026-02-15-codebase-review-fixes.md  2026-02-15-define-unification.md  2026-02-15-minimal-class-instance-method.md  2026-02-15-slot-based-runtime.md
benches/: backends.rs  frontend.rs  interpreter.rs  jit.rs  python.rs  transpiler.rs  vm.rs
benches/common/: mod.rs
scripts/: bench_summary.py
src/: ast.rs  backend.rs  builtins.rs  bytecode.rs  fixtures.rs  harness.rs  interpreter.rs  jit.rs  lexer.rs  lib.rs  main.rs  parser.rs  runtime.rs  token.rs  transpiler.rs  vm.rs
src/backend/: bytecode.rs  c_runtime.rs  interpreter.rs  jit.rs  mod.rs  transpiler.rs  vm.rs
src/backend/interpreter/: error.rs  mod.rs  runtime.rs  tests.rs  value.rs
src/backend/jit/: mod.rs
src/backend/vm/: mod.rs
src/interpreter/: error.rs  runtime.rs  value.rs
src/jit/: codegen.rs  runtime.rs
src/lexer/: error.rs  token.rs
src/parser/: ast.rs
src/runtime/: bool.rs  call_registry.rs  callable.rs  class.rs  dict.rs  error.rs  exception.rs  execution.rs  int.rs  list.rs  method.rs  none.rs  object.rs  string.rs  value.rs
src/runtime/callable/: builtin_function_object.rs  callable_object.rs  function_object.rs  mod.rs
src/runtime/class/: class_object.rs  (+2 more)
src/transpiler/: c_runtime.rs
src/vm/: runtime.rs
support/test_support/: Cargo.toml
tests/: harness.rs
tests/programs/: bench_gcd.py  if.py  invalid.py  invalid_dedent.py  long.py  simple.py
(+45 files in other folders)
