[package]
name = "pyparse"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
cranelift-codegen = "0.110.0"
cranelift-frontend = "0.110.0"
cranelift-jit = "0.110.0"
cranelift-module = "0.110.0"

[dev-dependencies]
indoc = "2.0.7"
criterion = "0.5"

[[bench]]
name = "backends"
harness = false
