[workspace]
members = [".", "support/test_support"]

[package]
name = "pyparse"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
itertools = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0"

[dev-dependencies]
indoc = "2.0.7"
criterion = "0.5"
test_support = { path = "support/test_support" }

[[bench]]
name = "frontend"
harness = false

[[bench]]
name = "interpreter"
harness = false

[[bench]]
name = "vm"
harness = false

[[bench]]
name = "python"
harness = false
